--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     ],
     "docsUrl": "",
     "showcaseUrl": "",
-    "sourceRepositoryUrl": "https://github.com/adobe/aemg-docs"
+    "sourceRepositoryUrl": "https://github.com/adobe/aemg-sites-template"
   }
 }
